tests/indexer/indexer.exp
Error: A.js:13
 13:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ property `foo` is a string. This type is incompatible with
 12: function foo2(): {[key: number]: string} {
                             ^^^^^^ number

Error: A.js:18
 18:   return { foo: "bar" }
                     ^^^^^ string. This type is incompatible with the expected return type of
 17: function foo3(): {[key: string]: number} {
                                      ^^^^^^ number

Error: A.js:23
 23:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ property `foo` is a string. This type is incompatible with
 22: function foo4(): {[key: number]: number} {
                             ^^^^^^ number

Error: A.js:23
 23:   return { foo: "bar" }
                     ^^^^^ string. This type is incompatible with the expected return type of
 22: function foo4(): {[key: number]: number} {
                                      ^^^^^^ number

Error: A.js:38
 38:   return { foo: "bar" }
              ^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected return type of
 37: function foo7(): {[key: string]: number; foo: number} {
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     38:   return { foo: "bar" }
                         ^^^^^ string. This type is incompatible with
     37: function foo7(): {[key: string]: number; foo: number} {
                                                       ^^^^^^ number

Error: call.js:4
  4: (y: {(number): string});
      ^ object type. This type is incompatible with
  4: (y: {(number): string});
         ^^^^^^^^^^^^^^^^^^ object type

Error: call.js:4
  4: (y: {(number): string});
      ^ object type. This type is incompatible with
  4: (y: {(number): string});
         ^^^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      4: (y: {(number): string});
             ^^^^^^^^^^^^^^^^^^ property `$call`. Callable signature not found in
      4: (y: {(number): string});
          ^ object type

Error: multiple.js:7
  7:       [k2: number]: number, // error: not supported (yet)
           ^^^^^^^^^^^^^^^^^^^^ multiple indexers are not supported


Found 8 errors
